[project]
name = "igittigitt"
version = "2.2.0"
description = "A spec-compliant .gitignore parser and path filter, 100% git-compatible, with an include/whitelist mode and a streaming, memory-bounded CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wcmatch>=10.1",
    "pydantic>=2.13.4",
    "rich-click>=1.9.8",
    "lib_cli_exit_tools>=2.3.2",
    "lib_log_rich>=6.3.5",
    "lib_layered_config>=5.5.2",
    "orjson>=3.11.9",
]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["gitignore", "ignore", "glob", "wildmatch", "copytree", "cli", "filter", "whitelist"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

# System packages required for CI runners (read by GitHub Actions workflow template)
# Format: "apt_package_name" for Ubuntu, future: {"apt": "...", "brew": "...", "choco": "..."}
[tool.ci]
system-dependencies-ubuntu = []
system-dependencies-macos = []
system-dependencies-windows-pip = []
system-dependencies-windows-choco = []
os = ["ubuntu-latest", "windows-latest", "macos-latest"]

[project.urls]
Homepage = "https://github.com/bitranox/igittigitt"
Repository = "https://github.com/bitranox/igittigitt.git"
Issues = "https://github.com/bitranox/igittigitt/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "hypothesis>=6.155.7",
  "ruff>=0.15.20",
  "pyright[nodejs]>=1.1.411",
  "bandit>=1.9.4",
  "build>=1.5.0",
  "twine>=6.2.0",
  # codecov-cli is disabled, not dropped: it requires click<8.3.0, which drags click back to
  # 8.2.1 - the version with CVE-2026-7246 (command injection in click.edit(), fixed in 8.3.3).
  # Worse, bmk requires click>=8.4.2, so uv cannot satisfy both and silently BACKTRACKS bmk to
  # 3.1.7 - this repo would never receive another bmk update, with no error at all.
  # Leaving it off costs nothing: CI uploads coverage via codecov/codecov-action, not this CLI,
  # and "bmk codecov" resolves codecovcli from PATH and only warns when absent.
  # Re-enable once codecov-cli relaxes its click<8.3.0 pin.
  # "codecov-cli>=11.2.8",
  "pip-audit>=2.10.1",
  "textual>=8.2.7",
  "import-linter>=2.12",
  "rtoml>=0.13.0",
  "httpx2>=2.5.0",
  # Transitive CVE pins
  "jaraco-context>=6.1.2",       # CVE-2025-23949
  "python-multipart>=0.0.32",    # CVE-2025-24486
  "wheel>=0.47.0",               # CVE-2025-24049
  "pynacl>=1.6.2",               # CVE-2025-69277
  "urllib3>=2.7.0",              # CVE-2025-66471, CVE-2025-66418
  "virtualenv>=21.5.1",         # CVE-2025-22702
]

[project.scripts]
igittigitt = "igittigitt.entry:main"

[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/igittigitt"]
include = [
    "src/igittigitt/py.typed",
    "src/igittigitt/adapters/config/defaultconfig.toml",
    "src/igittigitt/adapters/config/defaultconfig.d/*.toml",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", "W",     # pycodestyle
  "F",           # pyflakes
  "I",           # isort
  "N",           # pep8-naming
  "UP",          # pyupgrade
  "B",           # bugbear
  "A",           # builtins shadowing
  "C4",          # comprehension simplification
  "SIM",         # simplification
  "TCH",         # type-checking imports
  "RUF",         # ruff-specific
  "G",           # logging format (catches f-string in logger)
  "T20",         # print statements
  "PTH",         # pathlib preference
  "PLC", "PLE",  # pylint conventions/errors
  "S",           # flake8-bandit security checks
  "PERF",        # performance anti-patterns
  "ERA",         # eradicate dead/commented-out code
  "FBT",         # boolean trap (boolean positional args)
  "PLR",         # pylint refactor
  "PLW",         # pylint warnings
]
ignore = [
  "RUF002",    # ambiguous unicode characters in docstrings (en-dash) - typography choice
  "RUF022",    # unsorted __all__ - kept in logical grouping order
  "PLC0415",   # deferred imports inside functions - circular import prevention
  "TC001",     # stdlib imports at runtime - needed, not just for type hints
  "TC002",     # third-party imports at runtime - needed, not just for type hints
  "TC003",     # stdlib imports - same as TC001
  "TC006",     # cast() type expressions - existing code uses unquoted
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Notebooks: unused imports are often intentional for side effects; print() is
# how a notebook shows output.
"notebooks/*.ipynb" = ["F401", "T201"]
# Tests: assert is standard, test fixtures have passwords, magic values are clearer inline, temp paths are fine
"tests/*.py" = ["T20", "S101", "S105", "S106", "S108", "S311", "S603", "S607", "PLW1510", "FBT001", "FBT003", "PLR0913", "PLR2004", "C408", "PERF401"]
# CLI: Click framework injects boolean params; commands have many options; the
# error boundary naturally has several return branches (PLR0911).
"src/igittigitt/adapters/cli/**/*.py" = ["FBT001", "FBT002", "PLR0913", "PLR0911"]
# Ports / config / memory adapters: many-parameter signatures by design.
"src/igittigitt/application/*.py" = ["PLR0913"]
"src/igittigitt/adapters/config/*.py" = ["PLR0913", "FBT001", "FBT002"]
"src/igittigitt/adapters/memory/*.py" = ["PLR0913", "FBT001", "FBT002"]
# Core engine: a ported, doctest-heavy module with an established public API.
# It deliberately uses os.path (not pathlib) so it never resolves symlinks, and
# keeps boolean-flag function signatures used by the doctests; both are by design.
"src/igittigitt/igittigitt.py" = [
  "SLF001", "PLR0913", "N818", "FBT001", "FBT002", "C408", "SIM108", "SIM113",
  "PTH100", "PTH111", "PTH123", "PTH207", "PLW2901", "PERF401", "T201",
]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
  "src",
]

# `src` stays fully strict. Tests do legitimate white-box access of internal
# members (cache caps, the streaming token bound) and include a ported, loosely
# typed legacy suite; relax only the "unknown type" / private-usage rules there.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
pythonpath = ["src"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
  "local_only: tests that require the local dev environment (external resources, script composition); skipped in CI",
  "integration: tests requiring external resources (SMTP, databases, APIs); run via 'bmk ti' or 'mktesti.sh'",
]

[tool.coverage.run]
branch = true
parallel = false
# Use a temp directory for the coverage database to avoid SQLite locking
# issues on network-mounted filesystems. The {envtmpdir} placeholder is
# not supported by coverage.py, so we use an environment variable with
# fallback to a cross-platform temp location via the pytest_configure
# hook in tests/conftest.py. CI also sets COVERAGE_FILE via workflow env.
#
# For local development, the pytest hook automatically redirects to
# tempfile.gettempdir() before pytest-cov creates its Coverage() object.
# This static fallback catches edge cases where coverage is run directly.
data_file = "/tmp/.coverage.igittigitt"
source = ["src/igittigitt"]

[tool.coverage.report]
omit = [
  "tests/*",
]
fail_under = 80
show_missing = true

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[tool.clean]
# Patterns to remove when running `make clean`
patterns = [
  "**/__pycache__",
  ".hypothesis",
  ".import_linter_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".pyright",
  ".mypy_cache",
  ".tox",
  ".nox",
  ".eggs",
  "*.egg-info",
  "build",
  "dist",
  "htmlcov",
  ".coverage",
  "coverage.xml",
  "codecov.sh",
  ".cache",
  "result",
  ".data_arch_violations.json",
]

[tool.git]
# Default git remote for push/release commands
default-remote = "origin"

[tool.scripts.test]
# Configuration for CI/CD test runner
pytest-verbosity = "-vv"
coverage-report-file = "coverage.xml"
src-path = "src"

[tool.importlinter]
root_package = "igittigitt"
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Core engine is independent of the CLI adapters"
type = "forbidden"
source_modules = [
  "igittigitt.igittigitt",
  "igittigitt.conf_igittigitt",
]
forbidden_modules = [
  "igittigitt.adapters",
  "igittigitt.application",
  "igittigitt.composition",
]

[[tool.importlinter.contracts]]
name = "Domain is pure (no adapter/application/composition dependencies)"
type = "forbidden"
source_modules = [
  "igittigitt.domain",
]
forbidden_modules = [
  "igittigitt.adapters",
  "igittigitt.application",
  "igittigitt.composition",
]

[[tool.importlinter.contracts]]
name = "Clean Architecture layers"
type = "layers"
layers = [
  "igittigitt.composition",
  "igittigitt.adapters",
  "igittigitt.application",
  "igittigitt.domain",
]

[tool.pip-audit]
# Known vulnerabilities to ignore (environment-level packages, not project dependencies)
# PYSEC-2022-42969: py library ReDoS — py 1.11.0 is installed in the development
#   environment but is not a dependency of this project; no fix available.
ignore-vulns = [
  "PYSEC-2022-42969",       # py 1.11.0 - ReDoS, env-only, no fix available
  "CVE-2025-8869",          # pip 24.3.1 - env-only, not a project dependency
  "CVE-2026-1703",          # pip 24.3.1 - env-only, not a project dependency
  "CVE-2026-25990",         # pillow 12.0.0 - env-only, fix in 12.1.1
  # Transitive / dev-environment packages (not direct igittigitt deps); fix
  # version noted so the entry can be dropped once the env updates.
  "GHSA-537c-gmf6-5ccf",    # cryptography 48.0.0 - bundled OpenSSL, transitive, fix 48.0.1
  "GHSA-6v7p-g79w-8964",    # msgpack 1.1.2 - Unpacker reuse-after-error, transitive, fix 1.2.1
  "GHSA-4xgf-cpjx-pc3j",    # pydantic-settings 2.14.1 - NestedSecrets source, transitive, fix 2.14.2
  "GHSA-4cc2-g9w2-fhf6",    # zeep 4.3.2 - XXE in WSDL/XSD parsing, env-only (not a dep), fix 4.3.3
  "PYSEC-2026-2132",      # click 8.2.1: click.edit() command injection (fixed 8.3.3); dev-env-only, codecov-cli caps click<8.3.0, app never calls click.edit()
]

[tool.bashate]
# bashate style settings for .sh files (E003 excluded: indent handled by shfmt)
max-line-length = 120
ignores = ["E003"]
